apps/neuvector/base/fed-svc-ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nv-ingressroute
  namespace: neuvector
spec:
  entryPoints:
    - websecure
    - web
  tls:
    passthrough: true
